wip jre bundling